--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,26 @@
-*.log
-.DS_Store
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
+# Laravel / PHP
+/vendor
 /node_modules
 /public/build
 /public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
+/storage/*
+!/storage/app/public
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+.phpactor.json
+
+# IDE / Editor / OS
+/.vscode
+/.idea
+/.fleet
+/.zed
+.DS_Store
+Thumbs.db
+
+# Otros
 Homestead.json
 Homestead.yaml
-Thumbs.db
 imagen/
 contratos/
